# mini-dropbox-backend

./: .gitignore  AGENT_WORKFLOW.md  ARCHITECTURE_RULES.md  DECISIONS.md  PRODUCT_CONTEXT.md  PROGRESS_LOG.md  README.md  TASKS.md  alembic.ini  docker-compose.yml  pyproject.toml  test.md
.ai/: STATUS.md
src/application/common/: interfaces.py
src/application/files/: dto.py  interfaces.py  use_cases.py
src/application/system/: interfaces.py  use_cases.py
src/application/user/: dto.py  use_cases.py
src/domain/files/: entity.py  exceptions.py
src/domain/system/: entity.py
src/domain/user/: entity.py  exceptions.py
src/infrastructure/config/: settings.py
src/infrastructure/database/: main.py  uow.py
src/infrastructure/database/migrations/: env.py
src/infrastructure/database/migrations/versions/: 20251201_add_share_links_table.py  2724dd206941_add_file_and_folder_tables.py  fad7f1496993_create_user_table.py
src/infrastructure/database/models/: file.py  share_link.py  user.py
src/infrastructure/repositories/: file.py  share_link.py  system.py  user.py
src/infrastructure/services/: auth.py  security.py  storage.py
src/interfaces/api/: dependencies.py  main.py
src/interfaces/api/v1/routers/: auth.py  files.py  folders.py  share_links.py  system.py
src/interfaces/schemas/: file.py  system.py  user.py
tests/: conftest.py
tests/integration/: test_auth.py  test_files.py  test_folders.py  test_share_links.py
