[project]
name = "mini-dropbox-backend"
version = "0.1.0"
description = "A mini dropbox clone backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "asyncpg",
    "pydantic",
    "pydantic-settings",
    "python-multipart",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "boto3", # For S3 (sync, but often used) or aiobotocore
    "aiobotocore", # Async S3
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "mypy",
    "ruff"
]
